--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ hero: Get in touch
 ---
 
 <div class="contact-box">
-	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form">
+	<form action="{{ site.baseurl }}/contact-success/" method="post" class="contact-form" netlify>
 		<h3>Send us a message</h3>
 		<label for="name">Full Name</label>
 		<input type="text" name="name" id="name" placeholder="Enter your name..." autofocus>
