Added open:graph to pages

--- a/plugins.html
+++ b/plugins.html
@@ -1,5 +1,6 @@
 ---
 title: Discord themes & plugins!
+description: Free quality Themes and Plugins for Discord and easy installation instructions for BetterDiscord and more!
 hero: Discord Plugins
 subtitle: Custom JS plugins made by our commuity!
 layout: default
