--- a/themes.html
+++ b/themes.html
@@ -1,5 +1,6 @@
 ---
 title: Discord themes & plugins!
+description: A list of free and paid high quality themes made by our community. For the past 3 years we have been the #1 go to website for all Discord themes!
 hero: Discord Themes
 subtitle: Custom CSS themes made by our commuity!
 layout: default
