--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@ hero: About Us
 		<li>
 			<div class="staff-image" style="background-image: url({% include relative-src.html src=person.image_path %})"></div>
 			<div class="name">{{ person.name }}</div>
+			<div class="position">{{ person.position }}</div>
 		</li>
 	{% endfor %}
 </ul>
