--- a/plugins.html
+++ b/plugins.html
@@ -9,45 +9,21 @@ layout: default
 <div class="content" id="products">
 	<section>
 		<div class="container">
-			<h2>Themes</h2>
-			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
-			<ul class="product-list">
-				{% for product in site.products %}
-					<li>
-						<div class="styles">
-						{% include product-styles.html product=product %}
-						<div class="product-details">
-							<h4><a href="{{ product.url }}">{{ product.name }}</a></h4>
-							<div class="product-description">
-								{{ product.description_markdown | truncate: 45 | markdownify }}
-							</div>
-							{% if product.price == nil %}
-							{% else %}
-							<p>${{ product.price }}</p>
-							{% endif %}
-						</div>
-						</div>
-					</li>
-				{% endfor %}
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>
 			<h2>Plugins</h2>
 			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
 			<ul class="product-list">
-				{% for product in site.plugins %}
+				{% for plugins in site.pluginss %}
 					<li>
 						<div class="styles">
-						{% include product-styles.html product=product %}
+						<!-- {% include product-styles.html product=plugins %} -->
 						<div class="product-details">
-							<h4><a href="{{ product.url }}">{{ product.name }}</a></h4>
+							<h4><a href="{{ plugins.url }}">{{ plugins.name }}</a></h4>
 							<div class="product-description">
-								{{ product.description_markdown | truncate: 45 | markdownify }}
+								{{ plugins.description_markdown | truncate: 45 | markdownify }}
 							</div>
-							{% if product.price == nil %}
+							{% if plugins.price == nil %}
 							{% else %}
-							<p>${{ product.price }}</p>
+							<p>${{ plugins.price }}</p>
 							{% endif %}
 						</div>
 						</div>
