--- a/themes.html
+++ b/themes.html
@@ -36,3 +36,10 @@ layout: default
 		</div>
 	</section>
 </div>
+<a href="https://github.com/MrRobotjs/BetterDocs/edit/master/_themes/_defaults.md">
+<div class="upload-button-container">
+	<div class="upload-btn">
+		<span>+</span> Upload Theme
+	</div>
+</div>
+</a>
