--- a/plugins.html
+++ b/plugins.html
@@ -36,3 +36,10 @@ layout: default
 		</div>
 	</section>
 </div>
+<a href="https://github.com/MrRobotjs/BetterDocs/edit/master/_pluginss/_defaults.md">
+	<div class="upload-button-container">
+		<div class="upload-btn">
+			<span>+</span> Upload Plugin
+		</div>
+	</div>
+	</a>
