--- a/themes.html
+++ b/themes.html
@@ -17,7 +17,7 @@ layout: default
 						<div class="styles">
 						{% include product-styles.html product=theme %}
 						<div class="product-details">
-							<h4><a href="{{ theme.url }}">{{ theme.name }}</a></h4>
+							<h4><a href="{{ theme.url }}">{{ theme.title }}</a></h4>
 							<div class="product-description">
 								{{ theme.description_markdown | truncate: 45 | markdownify }}
 							</div>
