--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ download: https://github.com/rauenzi/BetterDiscordApp/releases
 						<div class="styles">
 						{% include product-styles.html product=theme %}
 						<div class="product-details">
-							<h4><a href="{{ product.url }}">{{ theme.name }}</a></h4>
+							<h4><a href="{{ theme.url }}">{{ theme.title }}</a></h4>
 							<div class="product-description">
 								{{ theme.description_markdown | truncate: 45 | markdownify }}
 							</div>
@@ -81,7 +81,7 @@ download: https://github.com/rauenzi/BetterDiscordApp/releases
 						<div class="styles">
 						<!-- {% include product-styles.html product=plugins %} -->
 						<div class="product-details">
-							<h4><a href="{{ product.url }}">{{ plugins.name }}</a></h4>
+							<h4><a href="{{ plugins.url }}">{{ plugins.title }}</a></h4>
 							<div class="product-description">
 								{{ plugins.description_markdown | truncate: 45 | markdownify }}
 							</div>
