--- a/plugins.html
+++ b/plugins.html
@@ -17,7 +17,7 @@ layout: default
 						<div class="styles">
 						<!-- {% include product-styles.html product=plugins %} -->
 						<div class="product-details">
-							<h4><a href="{{ plugins.url }}">{{ plugins.name }}</a></h4>
+							<h4><a href="{{ plugins.url }}">{{ plugins.title }}</a></h4>
 							<div class="product-description">
 								{{ plugins.description_markdown | truncate: 45 | markdownify }}
 							</div>
