--- a/themes.html
+++ b/themes.html
@@ -9,7 +9,7 @@ layout: default
 <div class="content" id="products">
 	<section>
 		<div class="container">
-			<h2>Themes</h2>
+			<h2>Themes ({{ site.themes | size }})</h2>
 			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
 			<ul class="product-list">
 				{% for theme in site.themes %}
