--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,9 @@ hero: Get in touch
 		<label for="message">Message</label>
 		<textarea name="message" id="message" placeholder="Enter your message..."></textarea>
 
+		<label for="file">File</label>
+		<input type="file" name="file" id="file">
+
 		<input type="hidden" name="_to" value="{{ page.email }}">
 		<input type="text" name="_gotcha" style="display: none;">
 
