--- a/themes.html
+++ b/themes.html
@@ -6,7 +6,7 @@ subtitle: Custom CSS themes made by our commuity!
 layout: default
 ---
 
-<div class="content" id="products">
+<div class="content" id="themes">
 	<section>
 		<div class="container">
 			<h2>Themes ({{ site.themes | size }})</h2>
