--- a/plugins.html
+++ b/plugins.html
@@ -6,7 +6,7 @@ subtitle: Custom JS plugins made by our commuity!
 layout: default
 ---
 
-<div class="content" id="products">
+<div class="content" id="plugins">
 	<section>
 		<div class="container">
 			<h2>Plugins ({{ site.pluginss | size }})</h2>
