--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ download: https://github.com/rauenzi/BetterDiscordApp/releases
 		<div class="container">
 			<h2><a href="{{ site.url }}/themes/">Themes ({{ site.themes | size }})</a></h2>
 			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
-			<ul class="product-list">
+			<ul class="product-list" id="themes">
 				{% for theme in site.themes %}
 					<li>
 						<div class="styles">
@@ -59,7 +59,7 @@ download: https://github.com/rauenzi/BetterDiscordApp/releases
 						<div class="product-details">
 							<h4><a href="{{ theme.url }}">{{ theme.title }}</a></h4>
 							<div class="product-description">
-								{{ theme.description_markdown | truncate: 45 | markdownify }}
+								{{ theme.description_markdown | truncate: 105 | markdownify }}
 							</div>
 							{% if theme.price == nil %}
 							{% else %}
@@ -75,7 +75,7 @@ download: https://github.com/rauenzi/BetterDiscordApp/releases
 			</ul>
 			<h2><a href="{{ site.url }}/plugins/">Plugins ({{ site.pluginss | size }})</a></h2>
 			<p class="editor-link" style="text-align: center;"><a href="cloudcannon:collections/_products" class="btn"><strong>&#9998;</strong> Manage products</a></p>
-			<ul class="product-list">
+			<ul class="product-list" id="plugins">
 				{% for plugins in site.pluginss %}
 					<li>
 						<div class="styles">
@@ -83,7 +83,7 @@ download: https://github.com/rauenzi/BetterDiscordApp/releases
 						<div class="product-details">
 							<h4><a href="{{ plugins.url }}">{{ plugins.title }}</a></h4>
 							<div class="product-description">
-								{{ plugins.description_markdown | truncate: 45 | markdownify }}
+								{{ plugins.description_markdown | truncate: 105 | markdownify }}
 							</div>
 							{% if plugins.price == nil %}
 							{% else %}
