--- a/plugins.html
+++ b/plugins.html
@@ -25,6 +25,12 @@ layout: default
 							{% else %}
 							<p>${{ plugins.price }}</p>
 							{% endif %}
+							<div class="button-wrapper flex-row">
+								<div class="button flex-button">
+									<a href="{{ plugins.download }}" target="blank">Download</a>
+									<a href="{{ plugins.support }}" target="blank">Support</a>
+								</div>
+							</div>
 						</div>
 						</div>
 					</li>
