--- a/themes.html
+++ b/themes.html
@@ -25,6 +25,13 @@ layout: default
 							{% else %}
 							<p>${{ theme.price }}</p>
 							{% endif %}
+							<div class="button-wrapper flex-row">
+								<div class="button flex-button">
+									<a href="{{ theme.download }}" target="blank">Download</a>
+									<a href="{{ site.url }}/demo/{{ theme.style }}/?theme={{ theme.demo }}" target="blank">Demo</a>
+										
+								</div>
+							</div>
 						</div>
 						</div>
 					</li>
