--- a/themes.html
+++ b/themes.html
@@ -18,6 +18,7 @@ layout: default
 						{% include product-styles.html product=theme %}
 						<div class="product-details">
 							<h4><a href="{{ theme.url }}">{{ theme.title }}</a></h4>
+							<h5>by <b>{{ theme.author }}</b></h5>
 							<div class="product-description">
 								{{ theme.description_markdown | truncate: 45 | markdownify }}
 							</div>
